--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "default-passive-events": "^2.0.0",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.6",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
     "vue-router": "3.0.1",
     "vuex": "3.6.0"
