--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.6",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14",
     "vue-router": "3.0.1",
     "vuex": "3.6.0"
