--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ansi_up": "^5.2.1",
     "async": "^3.2.3",
     "axios": "0.26.1",
     "core-js": "^3.8.3",
