--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.14",
     "vue-router": "3.0.1",
     "vuex": "3.6.0",
+    "vuex-persistedstate": "^4.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
