--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "ansi_up": "^5.2.1",
     "async": "^3.2.3",
     "axios": "0.26.1",
+    "codemirror": "5.46.0",
     "core-js": "^3.8.3",
     "default-passive-events": "^2.0.0",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.6",
+    "jshint": "^2.13.6",
+    "jsonlint": "^1.6.3",
     "node-sass": "^8.0.0",
     "qs": "^6.11.1",
     "sass-loader": "^13.2.2",
+    "script-loader": "^0.7.2",
     "svg-sprite-loader": "^6.0.11",
     "uuid": "^9.0.1",
     "vue": "^2.6.14",
