perf👌: 样式优化，聊天ws保持全局连接

--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
