--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "sass": "^1.63.0",
     "ansi_up": "^5.2.1",
     "async": "^3.2.3",
     "axios": "0.26.1",
@@ -18,9 +19,8 @@
     "element-ui": "^2.15.6",
     "jshint": "^2.13.6",
     "jsonlint": "^1.6.3",
-    "node-sass": "^9.0.0",
     "qs": "^6.11.1",
-    "sass-loader": "^16.0.0",
+    "sass-loader": "^13.0.0",
     "script-loader": "^0.7.2",
     "svg-sprite-loader": "^6.0.11",
     "uuid": "^9.0.1",
