--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -15,15 +15,16 @@ jobs:
 
       - name: Install and Build
         run: |
-          yarn install
-          yarn build
+          yarn
+          yarn run build
   
       - name: Commit dist
         run: |
           git checkout --orphan dist
           mv dist ../
           rm -rf ./*
-          mv ../dist ./
+          rm -rf ./.*
+          mv ../dist ./dist
           git config --local user.email 'l1040186796@gmail.com'
           git config --local user.name 'AkashiCoin'
           git add .
