--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.7",
     "jshint": "^2.13.6",
     "jsonlint": "^1.6.3",
+    "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
     "qs": "^6.11.1",
     "sass-loader": "^16.0.0",
